# agent-libs

./: .gitignore  CMakePresets.json  vcpkg.json
.github/workflows/: ci.yml  create-comment-kernel-testing.yml  create-comment-perf.yml  driver-api-version.yml  driver-schema-version.yml  driverkit.yml  drivers_ci.yml  e2e_ci.yml  format.yml  judge-commits.yml  latest-kernel.yml  pages.yml  perf.yml  release-body.yml  reusable_kernel_tests.yaml  semgrep_checks.yml  sysdig-oss-sync-downstream.yml  sysdig-oss-sync-postrun.yml  sysdig-oss-sync.yml  test_coverage_ci.yml  update-syscalls.yml
benchmark/: CMakeLists.txt
benchmark/sysdig/: README.md  stressor.c  sysdig_bench_var.h.in
cmake/modules/: ExternalProjectToolchain.cmake  engine_config.cmake  libbpf.cmake
docs/: CALLER_UPDATE_STATUS.md  CROSS_CLASS_DEADLOCK_ANALYSIS.md  DEADLOCK_ANALYSIS_REPORT.md  DEADLOCK_PREVENTION.md  METHOD_MIGRATION_PLAN.md  MIGRATION_IMPACT_SUMMARY.md  THREAD_SAFETY_IMPLEMENTATION.md
driver/: CMakeLists.txt  fillers_table.c  main.c  ppm.h  ppm_events.c  ppm_events_public.h  ppm_fillers.c  ppm_syscall.h  syscall_table.c
driver/modern_bpf/: CMakeLists.txt
proposals/: 20251127-thread-safe-sinsp-thread-manager.md
test/libsinsp_e2e/: event_capture.cpp  forking.cpp  main.cpp  paths.cpp  process.cpp  subprocess.cpp  sys_call_test.cpp  tcp_client_server.cpp  (+4 more)
userspace/libscap/engine/udig2/: CMakeLists.txt  udig-alloc.c  udig-consumer-open.c  udig-int.h  udig-next.c  udig-open.c  udig-open.h  udig-public.h  udig-settings.c  udig-stats.c  udig-vtable.c
vcpkg_triplets/: x64-linux-clang.cmake
(+136 files in other folders)
